ajouter swagger de favorite
